css/style.css
body {
	padding: 20px;	
	text-align: center;
	font-family: 'Montserrat', sans-serif;
}

.container {
	width: 50em;
	margin: auto;
	max-width: 900px;
}

.form-group {
	margin-left: 2em; 
	margin-right: 2em;
	margin-bottom: 2em;
	padding-top: 1em;
}

.ui-btn {
	font-family: 'Montserrat', sans-serif;
}

.btn-primary {
	color: #fff;
}

#line-chart {
	padding-top: 2em;
	width: 100%;
	height: 500px; 
}

.panel {
	margin-top: 3em;
	margin-bottom: 3em;
	margin-left: 10em;
	margin-right: 10em;
}

.col-lg-4 {
	position: static;
}

#data-table {
	padding-top: 2em;
	width: 80%;
}

/*.forms {
	border-radius: 12px;
	border: solid ;
	width: 80%;
	padding: 1.5em;
	margin: 2em auto;
	border-width: .15em;
	border-color:#85a6e2 ; 	
	background: linear-gradient( #1b7a7d, #bce0f4 5% , #bce0f4 90%, #1b7a7d);
	color: #032c3a;
	font-weight: bold;

}*/

/*.button {
    background-color: #020B2F ;
    border: solid #AAA5F6 ;
    color: #AAA5F6;
    padding: 10px 12px;
    text-align: center;
    text-decoration: white;
    display: inline-block;
    font-size:16px ;
    font-style: bold;
    margin: 4px 2px;
    cursor: crosshair ;
    width: 80%;
    border-radius: 12px;
}*/

